--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_projectId=exam-hero-9eb23
 VITE_storageBucket=exam-hero-9eb23.firebasestorage.app
 VITE_messagingSenderId=898580533071
 VITE_appId=1:898580533071:web:829fc65857bbba3e3fbf3a
+VITE_image_upload_key=04585db577c61023417e4e42621fb66b
