--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
@@ -27,6 +28,7 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.23.0",
+    "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
