--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.23.0",
     "swiper": "^12.0.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
